# MuJoCo_learning

./: README.md
install/: local_setup.sh  setup.sh
install/gen3_robot/lib/gen3_robot/: button_event  circle_sender  command_sender  gen3_robot_node  gen3_server  trajectory_publisher
install/gen3_robot/share/gen3_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gen3_robot/share/gen3_robot/launch/: gen3_robot.launch.py
install/gen3_robot/share/gen3_robot/models/kinova_gen3/: demo.xml  gen3_gripper_d435i_real.xml  gen3_robot.py
log/: latest_build
src/gen3_robot/: package.xml  setup.cfg  setup.py
src/gen3_robot/gen3_robot/: base_controller.py  gen3_controller.py  gen3_server.py  mujoco_view.py
src/gen3_robot/launch/: gen3_robot.launch.py  gen3_robot.py  gen3_server.launch.py
src/gen3_robot/models/kinova_gen3/: gen3.xml
src/kinova_gen3/: gen3_robot.py
